# BeamAuth

./: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: main.yml
contracts/: .gitignore  Cargo.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: test_claimed_event_emitted.1.json  test_duplicate_lock_rejected.1.json  test_expired_link.1.json  test_invalid_secret.1.json  test_sender_reclaim_after_expiry.1.json  test_successful_claim.1.json
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/factory/test_snapshots/test/: test_deploy_wallet.1.json
contracts/passkey_wallet/: Cargo.toml
contracts/passkey_wallet/src/: lib.rs
contracts/passkey_wallet/test_snapshots/test/: test_cannot_double_initialize.1.json  test_initialize_and_get_key.1.json
contracts/pod_registry/: Cargo.toml
contracts/pod_registry/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/pod/challenge/: route.ts
src/app/api/pod/register/: route.ts
src/app/api/relay/: route.ts
src/app/api/webauthn/challenge/: route.ts
src/app/claim/: page.tsx
src/app/dashboard/: page.tsx
src/app/docs/: page.tsx
src/app/features/: page.tsx
src/components/: ExecutionTimeline.tsx  Footer.tsx  HyperspaceCanvas.tsx  HyperspaceCanvasClient.tsx  Navbar.tsx
src/components/ui/: beams-background.tsx  button.tsx  layout.tsx
src/context/: WalletContext.tsx
src/lib/: stellar-client.ts  stellar.ts  webauthn.ts
